# HabitTracker-MCP

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  HABIT_TRACKER_DESIGN.md  LICENSE  README.md  docker-compose.yml  test_mcp.py
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/analytics/: mod.rs
src/domain/: entry.rs  habit.rs  mod.rs  streak.rs  types.rs
src/mcp/: mod.rs  protocol.rs  server.rs
src/storage/: migrations.rs  mod.rs  sqlite.rs
src/tools/: create.rs  insights.rs  list.rs  log.rs  mod.rs  status.rs  update.rs
tests/: test_mcp.py
tests/integration/: basic_integration.rs  mod.rs
tests/unit/: basic_tests.rs  mod.rs
